--- a/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
@@ -14,10 +14,15 @@
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content">-->
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="8dp"
@@ -38,14 +43,12 @@
                 android:id="@+id/rv_projectlist_syncing"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="8dp"
-                android:layout_below="@id/tv_sync"
                 android:layout_marginTop="8dp"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/tv_unsync"
                 android:text="Unsync"
-                android:layout_below="@id/rv_projectlist_syncing"
                 android:layout_marginTop="16dp"
                 android:textColor="@color/secondaryTextColor"
                 android:visibility="gone"
@@ -55,73 +58,70 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_projectlist"
                 android:layout_width="match_parent"
-                android:layout_below="@id/tv_unsync"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="48dp" />
-
-
-            <LinearLayout
-                android:id="@+id/ll_nodata"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ProgressBar
-                    android:id="@+id/prgbar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/tv_nodata"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Loading please wait"
-                    android:textColor="@color/secondaryColor"
-                    android:textSize="16sp" />
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cv_resync"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:cardBackgroundColor="@color/new_design_blue"
-                    app:cardCornerRadius="8dp"
-                    app:cardUseCompatPadding="true"
-                    app:contentPadding="8dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Sync project again"
-                        android:textColor="@android:color/white" />
-
-
-                </androidx.cardview.widget.CardView>
-
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_sync_project"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@color/new_design_blue"
-                android:gravity="center"
-                android:padding="8dp"
-                android:minHeight="48dp"
-                android:text="Sync Now"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.SyncProjectsSubtitle"
-                android:textColor="@color/white"
-                android:visibility="visible" />
-
-        </RelativeLayout>
+        </LinearLayout>
 <!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
     </androidx.core.widget.NestedScrollView>
+        <LinearLayout
+            android:id="@+id/ll_nodata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:id="@+id/prgbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_nodata"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Loading please wait"
+                android:textColor="@color/secondaryColor"
+                android:textSize="16sp" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_resync"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:cardBackgroundColor="@color/new_design_blue"
+                app:cardCornerRadius="8dp"
+                app:cardUseCompatPadding="true"
+                app:contentPadding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Sync project again"
+                    android:textColor="@android:color/white" />
+
+
+            </androidx.cardview.widget.CardView>
+
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_sync_project"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/new_design_blue"
+            android:gravity="center"
+            android:padding="8dp"
+            android:minHeight="48dp"
+            android:text="Sync Now"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.SyncProjectsSubtitle"
+            android:textColor="@color/white"
+            android:visibility="visible" />
+    </RelativeLayout>
 </LinearLayout>
