--- a/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
@@ -37,14 +37,14 @@
             android:paddingRight="8dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_sync"
-                android:text="Sync"
-                android:layout_marginTop="16dp"
-                android:textColor="@color/secondaryTextColor"
-                android:layout_width="wrap_content"
-                android:visibility="gone"
-                android:layout_height="wrap_content"/>
+<!--            <TextView-->
+<!--                android:id="@+id/tv_sync"-->
+<!--                android:text="Sync"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:textColor="@color/secondaryTextColor"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_height="wrap_content"/>-->
 
 
             <androidx.recyclerview.widget.RecyclerView
