--- a/collect_app/src/main/res/layouts/fieldsight/layout/project_expand_sync.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/project_expand_sync.xml
@@ -281,12 +281,13 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/tv_downloading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/text_primary"
-                android:textSize="14sp"
                 android:layout_weight="1"
-                android:text="@string/downloading"/>
+                android:text="@string/downloading"
+                android:textColor="@color/text_primary"
+                android:textSize="14sp" />
 
             <ImageView
                 android:id="@+id/iv_cancel"
