project image loading every time adapter notified fixed

--- a/collect_app/src/main/res/layouts/fieldsight/layout/project_expand_sync.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/project_expand_sync.xml
@@ -285,7 +285,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/downloading"
+                android:text="@string/syncing_project"
                 android:textColor="@color/text_primary"
                 android:textSize="14sp" />
 
