add progress in project sync

--- a/collect_app/src/main/res/layouts/fieldsight/layout/project_expand_sync.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/project_expand_sync.xml
@@ -275,9 +275,24 @@
             android:background="@android:color/white"
             android:layout_marginTop="8dp"/>
 
+
+            <ProgressBar
+                android:id="@+id/prgbar_sync"
+                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0/0"
+                android:layout_gravity="right"/>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:layout_height="wrap_content">
 
             <TextView
