--- a/collect_app/src/main/res/layouts/fieldsight/layout/project_expand_sync.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/project_expand_sync.xml
@@ -310,6 +310,7 @@
                 android:id="@+id/iv_cancel"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:visibility="gone"
                 app:srcCompat="@drawable/ic_circle_cancel_major_monotone"/>
 
             <ImageView
