--- a/collect_app/src/main/res/layouts/odk/layout/activity_login.xml
+++ b/collect_app/src/main/res/layouts/odk/layout/activity_login.xml
@@ -147,6 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:visibility="gone"
                 android:layout_marginTop="20dp"
                 android:text="@string/login_notice"
                 android:textColor="@color/light_grey"
