--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
@@ -226,16 +226,36 @@
                         android:layout_marginTop="4dp"
                         android:background="@color/blue" />
 
-                    <TextView
-                        android:id="@+id/tv_project_forms"
-                        android:layout_width="wrap_content"
+<!--                    <TextView-->
+<!--                        android:id="@+id/tv_project_forms"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="right"-->
+<!--                        android:layout_marginTop="8dp"-->
+<!--                        android:drawableLeft="@drawable/ic_circle_plus_major_monotone"-->
+<!--                        android:drawablePadding="8dp"-->
+<!--                        android:text="@string/project_forms"-->
+<!--                        android:textColor="@android:color/white" />-->
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_marginTop="8dp"
-                        android:drawableLeft="@drawable/ic_circle_plus_major_monotone"
-                        android:drawablePadding="8dp"
-                        android:text="@string/project_forms"
-                        android:textColor="@android:color/white" />
+                        android:orientation="horizontal"
+                        android:layout_marginTop="8dp">
+
+                        <TextView
+                            android:id="@+id/tv_project_forms"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_gravity="end"
+                            android:drawableLeft="@drawable/ic_circle_plus_major_monotone"
+                            android:drawablePadding="8dp"
+                            android:text="@string/project_forms"
+                            android:textColor="@android:color/white" />
+
+                    </RelativeLayout>
+
                 </LinearLayout>
 
                 <androidx.appcompat.widget.Toolbar
