--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
@@ -226,16 +226,7 @@
                         android:layout_marginTop="4dp"
                         android:background="@color/blue" />
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/tv_project_forms"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="right"-->
-<!--                        android:layout_marginTop="8dp"-->
-<!--                        android:drawableLeft="@drawable/ic_circle_plus_major_monotone"-->
-<!--                        android:drawablePadding="8dp"-->
-<!--                        android:text="@string/project_forms"-->
-<!--                        android:textColor="@android:color/white" />-->
+
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -243,11 +234,55 @@
                         android:orientation="horizontal"
                         android:layout_marginTop="8dp">
 
+                        <LinearLayout
+                            android:id="@+id/ll_sync_project_progress_count"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_toLeftOf="@id/tv_project_forms"
+                            android:orientation="vertical"
+                            android:layout_marginRight="8dp"
+                            android:visibility="gone"
+                            >
+
+                            <ProgressBar
+                                android:id="@+id/prgbar_sync"
+                                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:max="100"
+                                android:layout_marginTop="8dp" />
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/tv_downloading"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/syncing_project"
+                                    android:textColor="@color/white"
+                                    android:textSize="14sp" />
+                                <TextView
+                                    android:id="@+id/tv_count"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="0/0"
+                                    android:textSize="12sp"
+                                    android:textColor="@color/white"
+                                    android:layout_alignParentRight="true"/>
+                            </RelativeLayout>
+
+                        </LinearLayout>
+
+
                         <TextView
                             android:id="@+id/tv_project_forms"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
                             android:layout_gravity="end"
                             android:drawableLeft="@drawable/ic_circle_plus_major_monotone"
                             android:drawablePadding="8dp"
