--- a/collect_app/src/main/res/layouts/fieldsight/layout/bottom_sheet_contact.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/bottom_sheet_contact.xml
@@ -1,362 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <RelativeLayout
-
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <ImageView
-            android:id="@+id/iv_contactdetail_image"
+            android:id="@+id/user_profile_profile_picture"
             android:layout_width="match_parent"
-            android:layout_height="300dp" />
-
-        <ImageView
-
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:src="@drawable/black_transparent_top_graident" />
-
+            android:layout_height="250dp"
+            android:contentDescription="profile picture of the logged in user"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText"
+            tools:src="@drawable/fieldsight_logo" />
 
         <Button
-            android:id="@+id/btn_phone_call"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
+            android:stateListAnimator="@null"
+            android:id="@+id/user_profile_call_now"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="@dimen/margin_medium"
-            android:drawableStart="@drawable/ic_local_phone"
-            android:drawableLeft="@drawable/ic_local_phone"
+            android:layout_marginTop="16dp"
+            android:text="@string/user_profile_btn_call"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toStartOf="@+id/user_profile_email_now"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/user_profile_profile_picture" />
 
-            android:drawablePadding="@dimen/margin_medium"
-            android:text="Call Now"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/tv_info"
-            android:layout_width="match_parent"
+        <Button
+            android:stateListAnimator="@null"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:background="@drawable/rounded_rectangle_border_stroke_highlight"
+            android:id="@+id/user_profile_email_now"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/iv_contactdetail_image"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:paddingLeft="@dimen/margin_large"
-            android:text="Info"
-            android:textColor="@drawable/black"
-            android:textSize="@dimen/text_size_medium" />
+            android:layout_marginTop="16dp"
+            android:text="@string/user_profile_btn_email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/user_profile_call_now"
+            app:layout_constraintTop_toBottomOf="@id/user_profile_profile_picture" />
 
-        <TextView
-            android:id="@+id/tv_contactdetail_fullname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_info"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Full Name"
-            android:textSize="@dimen/text_size_small" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_contactdetail_fullname"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Username"
-            android:textSize="@dimen/text_size_small"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_role"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_contactdetail_username"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Role"
-            android:textSize="@dimen/text_size_small"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_contactdetail_role"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Address"
-            android:textSize="@dimen/text_size_small" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_gender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_contactdetail_address"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Gender"
-            android:textSize="@dimen/text_size_small" />
-
-
-        <TextView
-            android:id="@+id/tv_contact"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_contactdetail_gender"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_medium"
-            android:paddingRight="@dimen/margin_medium"
-            android:text="Contact"
-            android:textColor="@drawable/black"
-            android:textSize="@dimen/text_size_medium" />
-
-
-        <ImageView
-            android:id="@+id/iv_email_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/tv_contact"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-            android:background="@color/colorPrimary"
-            android:padding="2dp"
-            android:src="@android:drawable/ic_dialog_email"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_contact"
-            android:layout_toRightOf="@id/iv_email_icon"
-            android:autoLink="email"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Email"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_skype_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_email_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_skype_icon" />
-
-
-        <TextView
-            android:id="@+id/tv_contactdetail_skype"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_email_icon"
-            android:layout_toRightOf="@id/iv_skype_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Skype"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_twitter_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_skype_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_twitter_icon" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_twitter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_skype_icon"
-            android:layout_toRightOf="@id/iv_twitter_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Twitter"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_tango_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_twitter_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_tango" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_tango"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_twitter_icon"
-            android:layout_toRightOf="@id/iv_tango_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Tango"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_hike_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_tango_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_hike" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_hike"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_tango_icon"
-            android:layout_toRightOf="@id/iv_hike_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Hike"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_qq_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_hike_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_qq" />
-
-
-        <TextView
-            android:id="@+id/tv_contactdetail_qq"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_hike_icon"
-            android:layout_toRightOf="@id/iv_qq_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="QQ"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_googletalk_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_qq_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_google_talk" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_googletalk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_qq_icon"
-            android:layout_toRightOf="@id/iv_googletalk_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Google Talk"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_viber_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_googletalk_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_viber" />
-
-        <TextView
-            android:id="@+id/tv_contactdetail_viber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_googletalk_icon"
-            android:layout_toRightOf="@id/iv_viber_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Viber"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_whatsapp_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_viber_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_whatsapp" />
-
-
-        <TextView
-            android:id="@+id/tv_contactdetail_whatsapp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_viber_icon"
-            android:layout_toRightOf="@id/iv_whatsapp_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="Whats App"
-            android:textSize="@dimen/text_size_small" />
-
-        <ImageView
-            android:id="@+id/iv_wechat_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/iv_whatsapp_icon"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_small"
-
-            android:padding="2dp"
-            android:src="@drawable/ic_wechat" />
-
-
-        <TextView
-            android:id="@+id/tv_contactdetail_wechat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_whatsapp_icon"
-            android:layout_toRightOf="@id/iv_wechat_icon"
-            android:paddingLeft="@dimen/margin_large"
-            android:paddingTop="@dimen/margin_small"
-            android:paddingRight="@dimen/margin_small"
-            android:text="We Chat"
-            android:textSize="@dimen/text_size_small" />
-
-
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
