--- a/collect_app/src/main/res/drawable/ic_phone.xml
+++ b/collect_app/src/main/res/drawable/ic_phone.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M6.62,10.79c1.44,2.83 3.76,5.14 6.59,6.59l2.2,-2.2c0.27,-0.27 0.67,-0.36 1.02,-0.24 1.12,0.37 2.33,0.57 3.57,0.57 0.55,0 1,0.45 1,1V20c0,0.55 -0.45,1 -1,1 -9.39,0 -17,-7.61 -17,-17 0,-0.55 0.45,-1 1,-1h3.5c0.55,0 1,0.45 1,1 0,1.25 0.2,2.45 0.57,3.57 0.11,0.35 0.03,0.74 -0.25,1.02l-2.2,2.2z"/>
+    android:width="20dp"
+    android:height="20.027dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20.027">
+  <path
+      android:pathData="M18,18.025c-4.853,0.1 -8.677,-1.245 -11.389,-3.952C2.674,10.142 2.085,4.275 2.012,2.001L6.187,2.001l0.683,3.444L5.552,6.101a1,1 0,0 0,-0.539 1.063L5.013,7.161a9.708,9.708 0,0 0,7.818 7.818,1.008 1.008,0 0,0 1.056,-0.536l0.666,-1.319 3.448,0.69v4.212ZM19.2,12.013 L14.2,11.013a0.994,0.994 0,0 0,-1.086 0.525l0,0.006 -0.663,1.312A7.6,7.6 0,0 1,7.159 7.534L8.443,6.891a1,1 0,0 0,0.533 -1.1L8.976,5.801L7.986,0.801A1,1 0,0 0,7.007 0.001h-6a1,1 0,0 0,-1 0.943v0c-0.019,0.363 -0.4,8.948 5.178,14.53 3.023,3.023 7.185,4.55 12.387,4.55q0.726,0 1.476,-0.039a1,1 0,0 0,0.946 -1v-6a1,1 0,0 0,-0.8 -0.978L19.2,12.007Z"
+      android:fillColor="#b6b6b6"/>
 </vector>
