Added layout to update profile (#523)

--- a/collect_app/src/main/res/layouts/fieldsight/layout/bottom_sheet_contact.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/bottom_sheet_contact.xml
@@ -70,6 +70,7 @@
 
 
         <androidx.appcompat.widget.AppCompatButton
+            android:background="@color/new_design_blue"
             android:enabled="true"
             android:id="@+id/user_profile_call_now"
             android:layout_width="180dp"
